mnt: fix alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -653,7 +653,7 @@ input[type="radio"] {
 
     &.right-small {
 	float: right;
-	margin: 0 0 2em 2em;
+	margin: 2em 2em 2em 2em;
 	top: 0.25em;
 	max-heigth: 40%;
 
